# Dobriy_dela_hackaton

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.in  requirements.txt
backend/: .env  .env.example  Мастер таблица для НКО и КСО.xlsm - Ангарск.csv
backend/accounts/: admin.py  models.py  serializers.py  views.py
backend/accounts/migrations/: 0001_initial.py  0002_favorite.py  0003_user_avatar.py
backend/assistant/: admin.py  models.py  serializers.py  services.py  views.py
backend/assistant/migrations/: 0001_initial.py
backend/common/: permissions.py
backend/core/: settings.py  urls.py  v1_urls.py  views.py
backend/core/settings/: __init__.py  base.py  dev.py  prod.py
backend/events/: admin.py  models.py  serializers.py  views.py
backend/events/migrations/: 0001_initial.py  0002_eventregistration.py  0003_event_created_by.py  0004_event_slug.py  (+1 more)
backend/knowledge/: admin.py  models.py  serializers.py  views.py
backend/locations/: admin.py  models.py  serializers.py  views.py
backend/news/: admin.py  models.py  serializers.py  views.py
backend/organizations/: admin.py  models.py  serializers.py  views.py
docs/: ENV_SETUP.md  FRONTEND_CHECKLIST.md  FRONTEND_STATUS.md  IMPORT_NGO.md  IMPROVEMENTS.md  TESTING_GUIDE.md  api-contract.md  architecture.md  tz.txt
ml/data/data/: actions.index  (+1 more)
АКТУАЛЬНЫЕ ЭЛЕМЕНТЫ ФИРМЕННОГО СТИЛЯ РОСАТОМ/ЛОГОТИП Росатом/: NEW_LOGO_ROSATOM_rus_eng_2022.ai
АКТУАЛЬНЫЕ ЭЛЕМЕНТЫ ФИРМЕННОГО СТИЛЯ РОСАТОМ/Паттерн ЛИНЕЙНЫЙ/: Линейная графика.ai  Модуль_атомная_династия.ai  Паттерн_Атом_МЕДИА.ai
(+28 files in other folders)
