[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "text2sci"
version = "0.1.0"
description = "Text to Science: extraction + embeddings + retrieval"
dependencies = [
    "sentence-transformers",
    "numpy",
    "python-docx",
    "PyPDF2",
    "reportlab",
    "pymorphy2",
    "faiss-cpu",
    "easyocr"
]

[tool.setuptools.packages.find]
where = ["src"]